--- a/elements.html
+++ b/elements.html
@@ -53,7 +53,12 @@
 			    <div class="container">
 			    	<div class="row align-items-center justify-content-between d-flex">
 				      <div id="logo">
-				        <a href="index.html"><img src="img/logo.png" alt="" title="" /></a>
+				        <a href="index.html" class="logo-container">
+				          <div class="logo-icon">
+				            <img src="img/logo.png" alt="Segunda Casa Logo" title="Segunda Casa" />
+				          </div>
+				          <span class="logo-text">Segunda Casa</span>
+				        </a>
 				      </div>
 				      <nav id="nav-menu-container">
 				        <ul class="nav-menu">
