--- a/elements.html
+++ b/elements.html
@@ -468,7 +468,7 @@
 									</div>
 									<div class="input-group-icon mt-10">
 										<div class="icon"><i class="fa fa-plane" aria-hidden="true"></i></div>
-										<div class="form-select" id="default-select"">
+										<div class="form-select" id="default-select">
 											<select>
 												<option value="1">City</option>
 												<option value="1">Dhaka</option>
@@ -480,7 +480,7 @@
 									</div>
 									<div class="input-group-icon mt-10">
 										<div class="icon"><i class="fa fa-globe" aria-hidden="true"></i></div>
-										<div class="form-select" id="default-select"">
+										<div class="form-select" id="default-select">
 											<select>
 												<option value="1">Country</option>
 												<option value="1">Bangladesh</option>
@@ -539,7 +539,7 @@
 								</div>
 								<div class="single-element-widget mt-30">
 									<h3 class="mb-30">Selectboxes</h3>
-									<div class="default-select" id="default-select"">
+									<div class="default-select" id="default-select">
 										<select>
 											<option value="1">English</option>
 											<option value="1">Spanish</option>
