--- a/gallery.html
+++ b/gallery.html
@@ -54,7 +54,12 @@
 			    <div class="container">
 			    	<div class="row align-items-center justify-content-between d-flex">
 				      <div id="logo">
-				        <a href="index.html"><img src="img/logo.png" alt="" title="" /></a>
+				        <a href="index.html" class="logo-container">
+				          <div class="logo-icon">
+				            <img src="img/logo.png" alt="Segunda Casa Logo" title="Segunda Casa" />
+				          </div>
+				          <span class="logo-text">Segunda Casa</span>
+				        </a>
 				      </div>
 				      <nav id="nav-menu-container">
 				        <ul class="nav-menu">
@@ -266,7 +271,7 @@
 			<script src="js/jquery.nice-select.min.js"></script>			
 			<script src="js/parallax.min.js"></script>		
 			<script src="js/mail-script.js"></script>	
-			<script src="js/main.js"></script>	
+			<script type="module" src="js/main.js"></script>	
 		</body>
 	</html>
 
