--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
 								Segunda Casa - Arte Actual				
 							</h1>
 							<p class="pt-20 pb-20 text-white">
-								Somos un centro de diseño de estilo de vida donde cultivamos mente, cuerpo y espíritu a través del arte y la cultura. 🌿
-							</p>
+								Donde el arte —el camino de la evolución espiritual y consciente de la humanidad— encuentra un espacio tanto para artistas emergentes como para consolidados.							</p>
 							<a href="#about" class="primary-btn text-uppercase">Conoce Más</a>
 						</div>											
 					</div>
@@ -99,7 +98,7 @@
 					<div class="row">
 						<div class="col-lg-6 quote-left">
 							<h1>
-								Where <span>art</span> — the path of humanity's spiritual and conscious <span>evolution</span> — finds a <span>space</span> for both emerging and established artists.
+								Donde el <span>arte</span> —el camino de la evolución espiritual y consciente de la <span>humanidad</span>— encuentra un <span>espacio</span> tanto para artistas emergentes como para consolidados.
 							</h1>
 						</div>
 						<div class="col-lg-6 quote-right">
